src/test/deca/context/valid/castbetweenclass.deca

class A {}

class B extends A {}

{
    A a;
    B b;
    a = b;
}
