src/test/deca/context/invalid/instanceof.deca
class A{}
{A a;
boolean x = a instanceof int;}
